--- a/week 01 -data/0_handle_missing_values.ipynb
+++ b/week 01 -data/0_handle_missing_values.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1dba82c9",
    "metadata": {},
    "outputs": [],
@@ -40,20 +40,392 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cc0b5ff",
+   "id": "8a588cb2",
    "metadata": {},
    "source": [
-    "#### 2. Basic Information"
+    "#### 2. Basics Information\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5760bbff",
+   "execution_count": 4,
+   "id": "28af05d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RowNumber</th>\n",
+       "      <th>CustomerId</th>\n",
+       "      <th>Firstname</th>\n",
+       "      <th>Lastname</th>\n",
+       "      <th>CreditScore</th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Exited</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>15634602</td>\n",
+       "      <td>Grace</td>\n",
+       "      <td>Williams</td>\n",
+       "      <td>619</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101348.88</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>15647311</td>\n",
+       "      <td>David</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>608</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>83807.86</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>112542.58</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>15619304</td>\n",
+       "      <td>Hank</td>\n",
+       "      <td>Williams</td>\n",
+       "      <td>502</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>159660.80</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113931.57</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>15701354</td>\n",
+       "      <td>Eva</td>\n",
+       "      <td>Taylor</td>\n",
+       "      <td>699</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>93826.63</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>15737888</td>\n",
+       "      <td>Grace</td>\n",
+       "      <td>Miller</td>\n",
+       "      <td>850</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>125510.82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>79084.10</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>15574012</td>\n",
+       "      <td>Jack</td>\n",
+       "      <td>Smith</td>\n",
+       "      <td>645</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>113755.78</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>149756.71</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>15592531</td>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Wilson</td>\n",
+       "      <td>822</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10062.80</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>15656148</td>\n",
+       "      <td>Grace</td>\n",
+       "      <td>Wilson</td>\n",
+       "      <td>376</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>115046.74</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>119346.88</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>15792365</td>\n",
+       "      <td>Hank</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>501</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>142051.07</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>74940.50</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>15592389</td>\n",
+       "      <td>Eva</td>\n",
+       "      <td>Wilson</td>\n",
+       "      <td>684</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>134603.88</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>71725.73</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>15767821</td>\n",
+       "      <td>David</td>\n",
+       "      <td>Taylor</td>\n",
+       "      <td>528</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>102016.72</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80181.12</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>15737173</td>\n",
+       "      <td>Hank</td>\n",
+       "      <td>Garcia</td>\n",
+       "      <td>497</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>76390.01</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>15632264</td>\n",
+       "      <td>Hank</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>476</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26260.98</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>15691483</td>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Williams</td>\n",
+       "      <td>549</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>190857.79</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>15600882</td>\n",
+       "      <td>Frank</td>\n",
+       "      <td>Davis</td>\n",
+       "      <td>635</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>65951.65</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    RowNumber  CustomerId Firstname  Lastname  CreditScore Geography  Gender  \\\n",
+       "0           1    15634602     Grace  Williams          619    France  Female   \n",
+       "1           2    15647311     David     Jones          608     Spain  Female   \n",
+       "2           3    15619304      Hank  Williams          502    France  Female   \n",
+       "3           4    15701354       Eva    Taylor          699    France  Female   \n",
+       "4           5    15737888     Grace    Miller          850     Spain  Female   \n",
+       "5           6    15574012      Jack     Smith          645     Spain    Male   \n",
+       "6           7    15592531     Carol    Wilson          822    France    Male   \n",
+       "7           8    15656148     Grace    Wilson          376   Germany  Female   \n",
+       "8           9    15792365      Hank     Jones          501    France    Male   \n",
+       "9          10    15592389       Eva    Wilson          684    France    Male   \n",
+       "10         11    15767821     David    Taylor          528    France    Male   \n",
+       "11         12    15737173      Hank    Garcia          497     Spain    Male   \n",
+       "12         13    15632264      Hank     Jones          476    France  Female   \n",
+       "13         14    15691483     Carol  Williams          549    France  Female   \n",
+       "14         15    15600882     Frank     Davis          635     Spain  Female   \n",
+       "\n",
+       "     Age  Tenure    Balance  NumOfProducts  HasCrCard  IsActiveMember  \\\n",
+       "0   42.0       2       0.00              1          1               1   \n",
+       "1   41.0       1   83807.86              1          0               1   \n",
+       "2   42.0       8  159660.80              3          1               0   \n",
+       "3    NaN       1       0.00              2          0               0   \n",
+       "4   43.0       2  125510.82              1          1               1   \n",
+       "5   44.0       8  113755.78              2          1               0   \n",
+       "6   50.0       7       0.00              2          1               1   \n",
+       "7   29.0       4  115046.74              4          1               0   \n",
+       "8   44.0       4  142051.07              2          0               1   \n",
+       "9   27.0       2  134603.88              1          1               1   \n",
+       "10  31.0       6  102016.72              2          0               0   \n",
+       "11  24.0       3       0.00              2          1               0   \n",
+       "12  34.0      10       0.00              2          1               0   \n",
+       "13  25.0       5       0.00              2          0               0   \n",
+       "14  35.0       7       0.00              2          1               1   \n",
+       "\n",
+       "    EstimatedSalary  Exited  \n",
+       "0         101348.88       1  \n",
+       "1         112542.58       0  \n",
+       "2         113931.57       1  \n",
+       "3          93826.63       0  \n",
+       "4          79084.10       0  \n",
+       "5         149756.71       1  \n",
+       "6          10062.80       0  \n",
+       "7         119346.88       1  \n",
+       "8          74940.50       0  \n",
+       "9          71725.73       0  \n",
+       "10         80181.12       0  \n",
+       "11         76390.01       0  \n",
+       "12         26260.98       0  \n",
+       "13        190857.79       0  \n",
+       "14         65951.65       0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd."
+    "df = pd.read_csv(\"data/raw/CEHHbInToW.csv\")\n",
+    "df.head(15)"
    ]
   }
  ],
