got the number of null values in each column

--- a/week 01 -data/0_handle_missing_values.ipynb
+++ b/week 01 -data/0_handle_missing_values.ipynb
@@ -427,6 +427,43 @@
     "df = pd.read_csv(\"data/raw/CEHHbInToW.csv\")\n",
     "df.head(15)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "429e53e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RowNumber            0\n",
+       "CustomerId           0\n",
+       "Firstname            7\n",
+       "Lastname             6\n",
+       "CreditScore          0\n",
+       "Geography            0\n",
+       "Gender             108\n",
+       "Age                600\n",
+       "Tenure               0\n",
+       "Balance              0\n",
+       "NumOfProducts        0\n",
+       "HasCrCard            0\n",
+       "IsActiveMember       0\n",
+       "EstimatedSalary      0\n",
+       "Exited               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum() \n",
+    "# get number of null values of a column"
+   ]
   }
  ],
  "metadata": {
