--- a/week 01 -data/0_handle_missing_values.ipynb
+++ b/week 01 -data/0_handle_missing_values.ipynb
@@ -464,6 +464,572 @@
     "df.isnull().sum() \n",
     "# get number of null values of a column"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a41d22a4",
+   "metadata": {},
+   "source": [
+    "#### 3. Handling Missing Values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c91767c",
+   "metadata": {},
+   "source": [
+    "##### 3.1  Deletion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad51e045",
+   "metadata": {},
+   "source": [
+    "**Axis - 0** : check the the rows and drop if any row has missing values<br/>\n",
+    "**Axis - 1** : check the columns and drop if any column has missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cf0133f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RowNumber</th>\n",
+       "      <th>CustomerId</th>\n",
+       "      <th>Firstname</th>\n",
+       "      <th>Lastname</th>\n",
+       "      <th>CreditScore</th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Exited</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>15634602</td>\n",
+       "      <td>Grace</td>\n",
+       "      <td>Williams</td>\n",
+       "      <td>619</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101348.88</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>15647311</td>\n",
+       "      <td>David</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>608</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>83807.86</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>112542.58</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>15619304</td>\n",
+       "      <td>Hank</td>\n",
+       "      <td>Williams</td>\n",
+       "      <td>502</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>159660.80</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113931.57</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>15737888</td>\n",
+       "      <td>Grace</td>\n",
+       "      <td>Miller</td>\n",
+       "      <td>850</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>125510.82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>79084.10</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>15574012</td>\n",
+       "      <td>Jack</td>\n",
+       "      <td>Smith</td>\n",
+       "      <td>645</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>113755.78</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>149756.71</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>9996</td>\n",
+       "      <td>15606229</td>\n",
+       "      <td>Grace</td>\n",
+       "      <td>Garcia</td>\n",
+       "      <td>771</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>96270.64</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>9997</td>\n",
+       "      <td>15569892</td>\n",
+       "      <td>Jack</td>\n",
+       "      <td>Garcia</td>\n",
+       "      <td>516</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>57369.61</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101699.77</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>9998</td>\n",
+       "      <td>15584532</td>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Johnson</td>\n",
+       "      <td>709</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42085.58</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>9999</td>\n",
+       "      <td>15682355</td>\n",
+       "      <td>Jack</td>\n",
+       "      <td>Garcia</td>\n",
+       "      <td>772</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>75075.31</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>92888.52</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>15628319</td>\n",
+       "      <td>Eva</td>\n",
+       "      <td>Garcia</td>\n",
+       "      <td>792</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>130142.79</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38190.78</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9337 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      RowNumber  CustomerId Firstname  Lastname  CreditScore Geography  \\\n",
+       "0             1    15634602     Grace  Williams          619    France   \n",
+       "1             2    15647311     David     Jones          608     Spain   \n",
+       "2             3    15619304      Hank  Williams          502    France   \n",
+       "4             5    15737888     Grace    Miller          850     Spain   \n",
+       "5             6    15574012      Jack     Smith          645     Spain   \n",
+       "...         ...         ...       ...       ...          ...       ...   \n",
+       "9995       9996    15606229     Grace    Garcia          771    France   \n",
+       "9996       9997    15569892      Jack    Garcia          516    France   \n",
+       "9997       9998    15584532     Carol   Johnson          709    France   \n",
+       "9998       9999    15682355      Jack    Garcia          772   Germany   \n",
+       "9999      10000    15628319       Eva    Garcia          792    France   \n",
+       "\n",
+       "      Gender   Age  Tenure    Balance  NumOfProducts  HasCrCard  \\\n",
+       "0     Female  42.0       2       0.00              1          1   \n",
+       "1     Female  41.0       1   83807.86              1          0   \n",
+       "2     Female  42.0       8  159660.80              3          1   \n",
+       "4     Female  43.0       2  125510.82              1          1   \n",
+       "5       Male  44.0       8  113755.78              2          1   \n",
+       "...      ...   ...     ...        ...            ...        ...   \n",
+       "9995    Male  39.0       5       0.00              2          1   \n",
+       "9996    Male  35.0      10   57369.61              1          1   \n",
+       "9997  Female  36.0       7       0.00              1          0   \n",
+       "9998    Male  42.0       3   75075.31              2          1   \n",
+       "9999  Female  28.0       4  130142.79              1          1   \n",
+       "\n",
+       "      IsActiveMember  EstimatedSalary  Exited  \n",
+       "0                  1        101348.88       1  \n",
+       "1                  1        112542.58       0  \n",
+       "2                  0        113931.57       1  \n",
+       "4                  1         79084.10       0  \n",
+       "5                  0        149756.71       1  \n",
+       "...              ...              ...     ...  \n",
+       "9995               0         96270.64       0  \n",
+       "9996               1        101699.77       0  \n",
+       "9997               1         42085.58       1  \n",
+       "9998               0         92888.52       1  \n",
+       "9999               0         38190.78       0  \n",
+       "\n",
+       "[9337 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_copy = df.dropna(axis=0)\n",
+    "df_copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4a656d94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RowNumber</th>\n",
+       "      <th>CustomerId</th>\n",
+       "      <th>CreditScore</th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Exited</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>15634602</td>\n",
+       "      <td>619</td>\n",
+       "      <td>France</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101348.88</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>15647311</td>\n",
+       "      <td>608</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>1</td>\n",
+       "      <td>83807.86</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>112542.58</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>15619304</td>\n",
+       "      <td>502</td>\n",
+       "      <td>France</td>\n",
+       "      <td>8</td>\n",
+       "      <td>159660.80</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113931.57</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>15701354</td>\n",
+       "      <td>699</td>\n",
+       "      <td>France</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>93826.63</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>15737888</td>\n",
+       "      <td>850</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>2</td>\n",
+       "      <td>125510.82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>79084.10</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>9996</td>\n",
+       "      <td>15606229</td>\n",
+       "      <td>771</td>\n",
+       "      <td>France</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>96270.64</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>9997</td>\n",
+       "      <td>15569892</td>\n",
+       "      <td>516</td>\n",
+       "      <td>France</td>\n",
+       "      <td>10</td>\n",
+       "      <td>57369.61</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101699.77</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>9998</td>\n",
+       "      <td>15584532</td>\n",
+       "      <td>709</td>\n",
+       "      <td>France</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42085.58</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>9999</td>\n",
+       "      <td>15682355</td>\n",
+       "      <td>772</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>3</td>\n",
+       "      <td>75075.31</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>92888.52</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>15628319</td>\n",
+       "      <td>792</td>\n",
+       "      <td>France</td>\n",
+       "      <td>4</td>\n",
+       "      <td>130142.79</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38190.78</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      RowNumber  CustomerId  CreditScore Geography  Tenure    Balance  \\\n",
+       "0             1    15634602          619    France       2       0.00   \n",
+       "1             2    15647311          608     Spain       1   83807.86   \n",
+       "2             3    15619304          502    France       8  159660.80   \n",
+       "3             4    15701354          699    France       1       0.00   \n",
+       "4             5    15737888          850     Spain       2  125510.82   \n",
+       "...         ...         ...          ...       ...     ...        ...   \n",
+       "9995       9996    15606229          771    France       5       0.00   \n",
+       "9996       9997    15569892          516    France      10   57369.61   \n",
+       "9997       9998    15584532          709    France       7       0.00   \n",
+       "9998       9999    15682355          772   Germany       3   75075.31   \n",
+       "9999      10000    15628319          792    France       4  130142.79   \n",
+       "\n",
+       "      NumOfProducts  HasCrCard  IsActiveMember  EstimatedSalary  Exited  \n",
+       "0                 1          1               1        101348.88       1  \n",
+       "1                 1          0               1        112542.58       0  \n",
+       "2                 3          1               0        113931.57       1  \n",
+       "3                 2          0               0         93826.63       0  \n",
+       "4                 1          1               1         79084.10       0  \n",
+       "...             ...        ...             ...              ...     ...  \n",
+       "9995              2          1               0         96270.64       0  \n",
+       "9996              1          1               1        101699.77       0  \n",
+       "9997              1          0               1         42085.58       1  \n",
+       "9998              2          1               0         92888.52       1  \n",
+       "9999              1          1               0         38190.78       0  \n",
+       "\n",
+       "[10000 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_copy = df.dropna(axis=1)\n",
+    "df_copy"
+   ]
   }
  ],
  "metadata": {
