dropped unnecessary columns

--- a/week 01 -data/0_handle_missing_values.ipynb
+++ b/week 01 -data/0_handle_missing_values.ipynb
@@ -1453,10 +1453,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "699c0101",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eva , Wilson : Female\n",
+      "Ivy , Johnson : Female\n",
+      "David , Taylor : Male\n",
+      "Frank , Davis : Male\n",
+      "Jack , Wilson : Male\n",
+      "David , Miller : Male\n",
+      "Eva , Taylor : Female\n",
+      "Grace , Johnson : Female\n",
+      "Hank , Miller : Male\n",
+      "Frank , Williams : Male\n",
+      "Alice , Davis : Female\n",
+      "Alice , Brown : Female\n",
+      "Alice , Garcia : Female\n",
+      "Bob , Jones : Male\n",
+      "Jack , Davis : Male\n",
+      "Grace , Williams : Female\n",
+      "Ivy , Jones : Female\n",
+      "David , Smith : Male\n",
+      "David , Miller : Male\n",
+      "Eva , Williams : Female\n",
+      "Frank , Garcia : Male\n",
+      "Alice , Wilson : Female\n",
+      "Carol , Jones : Female\n",
+      "Hank , Davis : Male\n",
+      "Ivy , Williams : Female\n",
+      "Hank , Smith : Male\n",
+      "Ivy , Jones : Female\n",
+      "Alice , Brown : Female\n",
+      "Eva , Taylor : Female\n",
+      "Carol , Williams : Female\n",
+      "Jack , Williams : Male\n",
+      "Ivy , Brown : Female\n",
+      "David , Brown : Male\n",
+      "Bob , Smith : Male\n",
+      "Frank , Wilson : Male\n",
+      "Bob , Williams : Male\n",
+      "Ivy , Johnson : Female\n",
+      "Jack , Taylor : Male\n",
+      "David , Davis : Male\n",
+      "David , Garcia : Male\n",
+      "Eva , Brown : Female\n",
+      "Frank , Wilson : Male\n",
+      "Jack , Davis : Male\n",
+      "Eva , Miller : Female\n",
+      "Grace , Williams : Female\n",
+      "Bob , Jones : Male\n",
+      "David , Taylor : Male\n",
+      "Frank , Smith : Male\n",
+      "Ivy , Jones : Female\n",
+      "David , Williams : Male\n",
+      "Grace , Jones : Female\n",
+      "Grace , Miller : Female\n",
+      "Bob , Taylor : Male\n",
+      "Grace , Miller : Female\n",
+      "Bob , Taylor : Male\n",
+      "Hank , Jones : Male\n",
+      "Hank , Wilson : Male\n",
+      "Grace , Smith : Female\n",
+      "Bob , Johnson : Male\n",
+      "Hank , Brown : Male\n",
+      "Carol , Jones : Female\n",
+      "Hank , Williams : Male\n",
+      "Hank , Miller : Male\n",
+      "Frank , Davis : Male\n",
+      "Ivy , Wilson : Female\n",
+      "Hank , Jones : Male\n",
+      "Bob , Jones : Male\n",
+      "Frank , Brown : Male\n",
+      "Frank , Smith : Male\n",
+      "Bob , Taylor : Male\n",
+      "Alice , Johnson : Female\n",
+      "Ivy , Wilson : Female\n",
+      "Grace , Brown : Female\n",
+      "Eva , Davis : Female\n",
+      "Eva , Wilson : Female\n",
+      "Frank , Miller : Male\n",
+      "David , Miller : Male\n",
+      "Carol , Brown : Female\n",
+      "Eva , Miller : Female\n",
+      "Alice , Garcia : Female\n",
+      "Carol , Davis : Female\n",
+      "Frank , Smith : Male\n",
+      "Ivy , Miller : Female\n",
+      "Bob , Garcia : Male\n",
+      "Alice , Garcia : Female\n",
+      "Frank , Smith : Male\n",
+      "Grace , Johnson : Female\n",
+      "Eva , Garcia : Female\n",
+      "Alice , Jones : Female\n",
+      "David , Wilson : Male\n",
+      "Ivy , Garcia : Female\n",
+      "Frank , Wilson : Male\n",
+      "Frank , Wilson : Male\n",
+      "Bob , Williams : Male\n",
+      "Ivy , Johnson : Female\n",
+      "David , Brown : Male\n",
+      "Ivy , Miller : Female\n",
+      "Carol , Smith : Female\n",
+      "David , Williams : Male\n",
+      "Hank , Williams : Male\n",
+      "David , Brown : Male\n",
+      "Carol , Garcia : Female\n",
+      "Hank , Miller : Male\n",
+      "Grace , Wilson : Female\n",
+      "Hank , Johnson : Male\n",
+      "Grace , Jones : Female\n",
+      "Alice , Davis : Female\n",
+      "Jack , Brown : Male\n"
+     ]
+    }
+   ],
    "source": [
     "impu_copy = df.copy()\n",
     "impu_missing_gender = impu_copy[impu_copy['Gender'].isnull()]\n",
@@ -1475,6 +1590,258 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d4b21a4",
+   "metadata": {},
+   "source": [
+    "#### 3.3 Dropping columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "db0630f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CreditScore</th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Exited</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>619</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101348.88</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>608</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>83807.86</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>112542.58</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>502</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>159660.80</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113931.57</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>699</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>93826.63</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>850</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>125510.82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>79084.10</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>771</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>96270.64</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>516</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>57369.61</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101699.77</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>709</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42085.58</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>772</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>75075.31</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>92888.52</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>792</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>130142.79</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38190.78</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      CreditScore Geography  Gender   Age  Tenure    Balance  NumOfProducts  \\\n",
+       "0             619    France  Female  42.0       2       0.00              1   \n",
+       "1             608     Spain  Female  41.0       1   83807.86              1   \n",
+       "2             502    France  Female  42.0       8  159660.80              3   \n",
+       "3             699    France  Female   NaN       1       0.00              2   \n",
+       "4             850     Spain  Female  43.0       2  125510.82              1   \n",
+       "...           ...       ...     ...   ...     ...        ...            ...   \n",
+       "9995          771    France    Male  39.0       5       0.00              2   \n",
+       "9996          516    France    Male  35.0      10   57369.61              1   \n",
+       "9997          709    France  Female  36.0       7       0.00              1   \n",
+       "9998          772   Germany    Male  42.0       3   75075.31              2   \n",
+       "9999          792    France  Female  28.0       4  130142.79              1   \n",
+       "\n",
+       "      HasCrCard  IsActiveMember  EstimatedSalary  Exited  \n",
+       "0             1               1        101348.88       1  \n",
+       "1             0               1        112542.58       0  \n",
+       "2             1               0        113931.57       1  \n",
+       "3             0               0         93826.63       0  \n",
+       "4             1               1         79084.10       0  \n",
+       "...         ...             ...              ...     ...  \n",
+       "9995          1               0         96270.64       0  \n",
+       "9996          1               1        101699.77       0  \n",
+       "9997          0               1         42085.58       1  \n",
+       "9998          1               0         92888.52       1  \n",
+       "9999          1               0         38190.78       0  \n",
+       "\n",
+       "[10000 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "impu_copy.head()\n",
+    "impu_copy.drop(\n",
+    "    columns=[\n",
+    "        'RowNumber', 'CustomerId', 'Firstname', 'Lastname'\n",
+    "    ]\n",
+    ")"
    ]
   }
  ],
