maked index=false

--- a/week 01 -data/0_handle_missing_values.ipynb
+++ b/week 01 -data/0_handle_missing_values.ipynb
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "id": "429e53e6",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "id": "cf0133f6",
    "metadata": {},
    "outputs": [
@@ -843,7 +843,7 @@
        "[9337 rows x 15 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "id": "4a656d94",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1084,7 @@
        "[10000 rows x 11 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 74,
    "id": "0b9f13fd",
    "metadata": {},
    "outputs": [
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 75,
    "id": "b32612d3",
    "metadata": {},
    "outputs": [
@@ -1159,7 +1159,7 @@
        "<Axes: xlabel='Age', ylabel='Count'>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "id": "596690b4",
    "metadata": {},
    "outputs": [
@@ -1340,7 +1340,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 77,
    "id": "4280aeb6",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1379,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 78,
    "id": "31fc325f",
    "metadata": {},
    "outputs": [
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 79,
    "id": "699c0101",
    "metadata": {},
    "outputs": [
@@ -1573,7 +1573,7 @@
     }
    ],
    "source": [
-    "impu_copy = df.copy()\n",
+    "\n",
     "impu_missing_gender = impu_copy[impu_copy['Gender'].isnull()]\n",
     "\n",
     "\n",
@@ -1602,246 +1602,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "id": "db0630f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "impu_copy.head()\n",
+    "impu_copy = impu_copy.drop(\n",
+    "    columns=[\n",
+    "        'RowNumber', 'CustomerId', 'Firstname', 'Lastname'\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "4cc9bc37",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CreditScore</th>\n",
-       "      <th>Geography</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Tenure</th>\n",
-       "      <th>Balance</th>\n",
-       "      <th>NumOfProducts</th>\n",
-       "      <th>HasCrCard</th>\n",
-       "      <th>IsActiveMember</th>\n",
-       "      <th>EstimatedSalary</th>\n",
-       "      <th>Exited</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>619</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101348.88</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>608</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>83807.86</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>112542.58</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>502</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>159660.80</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113931.57</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>699</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>93826.63</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>850</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>125510.82</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>79084.10</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9995</th>\n",
-       "      <td>771</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>96270.64</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9996</th>\n",
-       "      <td>516</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>57369.61</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101699.77</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>709</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>42085.58</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>772</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>75075.31</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>92888.52</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>792</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>130142.79</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>38190.78</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10000 rows × 11 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      CreditScore Geography  Gender   Age  Tenure    Balance  NumOfProducts  \\\n",
-       "0             619    France  Female  42.0       2       0.00              1   \n",
-       "1             608     Spain  Female  41.0       1   83807.86              1   \n",
-       "2             502    France  Female  42.0       8  159660.80              3   \n",
-       "3             699    France  Female   NaN       1       0.00              2   \n",
-       "4             850     Spain  Female  43.0       2  125510.82              1   \n",
-       "...           ...       ...     ...   ...     ...        ...            ...   \n",
-       "9995          771    France    Male  39.0       5       0.00              2   \n",
-       "9996          516    France    Male  35.0      10   57369.61              1   \n",
-       "9997          709    France  Female  36.0       7       0.00              1   \n",
-       "9998          772   Germany    Male  42.0       3   75075.31              2   \n",
-       "9999          792    France  Female  28.0       4  130142.79              1   \n",
-       "\n",
-       "      HasCrCard  IsActiveMember  EstimatedSalary  Exited  \n",
-       "0             1               1        101348.88       1  \n",
-       "1             0               1        112542.58       0  \n",
-       "2             1               0        113931.57       1  \n",
-       "3             0               0         93826.63       0  \n",
-       "4             1               1         79084.10       0  \n",
-       "...         ...             ...              ...     ...  \n",
-       "9995          1               0         96270.64       0  \n",
-       "9996          1               1        101699.77       0  \n",
-       "9997          0               1         42085.58       1  \n",
-       "9998          1               0         92888.52       1  \n",
-       "9999          1               0         38190.78       0  \n",
-       "\n",
-       "[10000 rows x 11 columns]"
+       "CreditScore        0\n",
+       "Geography          0\n",
+       "Gender             0\n",
+       "Age                0\n",
+       "Tenure             0\n",
+       "Balance            0\n",
+       "NumOfProducts      0\n",
+       "HasCrCard          0\n",
+       "IsActiveMember     0\n",
+       "EstimatedSalary    0\n",
+       "Exited             0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "impu_copy.head()\n",
-    "impu_copy.drop(\n",
-    "    columns=[\n",
-    "        'RowNumber', 'CustomerId', 'Firstname', 'Lastname'\n",
-    "    ]\n",
-    ")"
+    "impu_copy.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "971bf738",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "impu_copy.to_csv(\"data/processed/CEHHbInToW_missing_valued_handled.csv\", index=False)\n"
    ]
   }
  ],
