performed empirical rules/ 3-sigma rule to detect anomolies

--- a/week 01 -data/1_handle_ouliers.ipynb
+++ b/week 01 -data/1_handle_ouliers.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "e47c90aa",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "d02b0aee",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "11cda9ab",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "c9e8291f",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "d78fb130",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "0984f8c5",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "\"\\nfor indx, col in enumerate(categorical_columns):\\n    df[col].value_counts().plot(\\n                        kind= 'pie',\\n                        ax = axes[indx]\\n                    )\\n\\n\""
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "c98e6238",
    "metadata": {},
    "outputs": [
@@ -346,6 +346,65 @@
     "                ax=axes[indx])\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dff2477f",
+   "metadata": {},
+   "source": [
+    "#### 3.3. empirical rule/ 3-sigma rule"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "35329b69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def find_anomoly(data):\n",
+    "\n",
+    "    mean = data.mean()\n",
+    "    std = data.std()\n",
+    "\n",
+    "    upper_bound = mean + (3*std)\n",
+    "    lower_bound = mean - (3*std)\n",
+    "\n",
+    "    return ((data > upper_bound) | (data < lower_bound))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "69347307",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CreditScore : 8 outliers (0.0 %)\n",
+      "Age : 144 outliers (1.0 %)\n",
+      "Tenure : 0 outliers (0.0 %)\n",
+      "Balance : 0 outliers (0.0 %)\n",
+      "EstimatedSalary : 0 outliers (0.0 %)\n"
+     ]
+    }
+   ],
+   "source": [
+    "numerical_columns = ['CreditScore',\t'Age',\n",
+    "                     'Tenure',\t'Balance',\n",
+    "                     'EstimatedSalary'\n",
+    "                     ]\n",
+    "\n",
+    "for col in numerical_columns:\n",
+    "    n_ouliers = find_anomoly(df[col]).sum()\n",
+    "    n_ouliers_precentage = round(n_ouliers / len(df),2) *100\n",
+    "    print(f\"{col} : {n_ouliers} outliers ({n_ouliers_precentage} %)\")\n",
+    "    \n"
    ]
   }
  ],
