calculated IQR to detect outliers

--- a/week 01 -data/1_handle_ouliers.ipynb
+++ b/week 01 -data/1_handle_ouliers.ipynb
@@ -406,6 +406,66 @@
     "    print(f\"{col} : {n_ouliers} outliers ({n_ouliers_precentage} %)\")\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5121d1d6",
+   "metadata": {},
+   "source": [
+    "#### 3.4 IQR Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "dbaccf6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_anomoly(data):\n",
+    "    Q1 = np.percentile(data, 25)\n",
+    "    Q3 = np.percentile(data, 75)\n",
+    "\n",
+    "    IQR = Q3 - Q1\n",
+    "\n",
+    "    upper_bowned = Q3 + (1.5 * IQR)\n",
+    "    lower_bowned = Q1 - (1.5 * IQR)\n",
+    "\n",
+    "    return (data > upper_bowned) | (data < lower_bowned)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "e0fa3051",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CreditScore : 15 outliers (0.0 %)\n",
+      "Age : 501 outliers (5.0 %)\n",
+      "Tenure : 0 outliers (0.0 %)\n",
+      "Balance : 0 outliers (0.0 %)\n",
+      "EstimatedSalary : 0 outliers (0.0 %)\n"
+     ]
+    }
+   ],
+   "source": [
+    "numerical_columns = ['CreditScore',\t'Age',\n",
+    "                     'Tenure',\t'Balance',\n",
+    "                     'EstimatedSalary'\n",
+    "                     ]\n",
+    "\n",
+    "for col in numerical_columns:\n",
+    "    n_ouliers = find_anomoly(df[col]).sum()\n",
+    "    n_ouliers_precentage = round(n_ouliers / len(df),2) *100\n",
+    "    print(f\"{col} : {n_ouliers} outliers ({n_ouliers_precentage} %)\")\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
