found rows that have more than two out liers

--- a/week 01 -data/1_handle_ouliers.ipynb
+++ b/week 01 -data/1_handle_ouliers.ipynb
@@ -466,6 +466,46 @@
     "    print(f\"{col} : {n_ouliers} outliers ({n_ouliers_precentage} %)\")\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac027ce7",
+   "metadata": {},
+   "source": [
+    "- let says we have decided to remove the raw that have more than one outliers values.how to find this?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "76b8a847",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      CreditScore   Age  Tenure  Balance  EstimatedSalary  count\n",
+      "8762         True  True   False    False            False      2\n"
+     ]
+    }
+   ],
+   "source": [
+    "outlier_mask_log = pd.DataFrame()\n",
+    "\n",
+    "numerical_columns = ['CreditScore',\t'Age',\n",
+    "                     'Tenure',\t'Balance',\n",
+    "                     'EstimatedSalary'\n",
+    "                     ]\n",
+    "\n",
+    "for col in numerical_columns:\n",
+    "    outlier_mask_log[col] = find_anomoly(df[col])\n",
+    "    \n",
+    "outlier_count = outlier_mask_log.sum(axis=1)\n",
+    "outlier_mask_log['count'] = outlier_count\n",
+    "outlier_mask_log = outlier_mask_log[outlier_mask_log['count'] == 2]\n",
+    "print(outlier_mask_log)"
+   ]
   }
  ],
  "metadata": {
