saveed the calculated outlier file

--- a/week 01 -data/1_handle_ouliers.ipynb
+++ b/week 01 -data/1_handle_ouliers.ipynb
@@ -506,6 +506,16 @@
     "outlier_mask_log = outlier_mask_log[outlier_mask_log['count'] == 2]\n",
     "print(outlier_mask_log)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a54a1507",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"data/processed/CEHHbInToW_calculated_outliers.csv\")"
+   ]
   }
  ],
  "metadata": {
