applied bing to credit score

--- a/week 01 -data/1_handle_ouliers.ipynb
+++ b/week 01 -data/1_handle_ouliers.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "d02b0aee",
    "metadata": {},
    "outputs": [
@@ -509,12 +509,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "a54a1507",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"data/processed/CEHHbInToW_calculated_outliers.csv\")"
+    "df.to_csv(\"data/processed/CEHHbInToW_calculated_outliers.csv\" , index=False)"
    ]
   }
  ],
