--- a/week 01 -data/2_feature_binnings.ipynb
+++ b/week 01 -data/2_feature_binnings.ipynb
@@ -252,6 +252,16 @@
     "```python\n",
     "assert condition, \"error message if condition is False\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "784a0f37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"data/processed/CEHHbInToW_binning_applied.csv\")"
+   ]
   }
  ],
  "metadata": {
