--- a/week 01 -data/2_feature_binnings.ipynb
+++ b/week 01 -data/2_feature_binnings.ipynb
@@ -255,12 +255,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "784a0f37",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"data/processed/CEHHbInToW_binning_applied.csv\")"
+    "df.to_csv(\"data/processed/CEHHbInToW_binning_applied.csv\", index=False)"
    ]
   }
  ],
