saved encoded data frame

--- a/week 01 -data/3_feature_encoding.ipynb
+++ b/week 01 -data/3_feature_encoding.ipynb
@@ -284,6 +284,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "296d0b51",
+   "metadata": {},
+   "source": [
+    "##### we can use skit learn to this in simple way"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2adc6213",
    "metadata": {},
    "source": [
@@ -865,6 +873,16 @@
     "df_encoded[\"CreditScoreBines\"] = df_encoded[\"CreditScoreBines\"].map(encode_dict_creditscorebin)\n",
     "df_encoded.head(10\n",
     "                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "51a6a030",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_encoded.to_csv(\"data/processed/CEHHbInToW_encoded.csv\")"
    ]
   }
  ],
