--- a/week 01 -data/3_feature_encoding.ipynb
+++ b/week 01 -data/3_feature_encoding.ipynb
@@ -877,12 +877,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "51a6a030",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_encoded.to_csv(\"data/processed/CEHHbInToW_encoded.csv\")"
+    "df_encoded.to_csv(\"data/processed/CEHHbInToW_encoded.csv\" ,index=False)"
    ]
   }
  ],
